--- a/.github/workflows/sync_garmin_to_notion.yml
+++ b/.github/workflows/sync_garmin_to_notion.yml
@@ -45,7 +45,7 @@ jobs:
           NOTION_PR_DB_ID: ${{ secrets.NOTION_PR_DB_ID }}
           NOTION_STEPS_DB_ID: ${{ secrets.NOTION_STEPS_DB_ID }}
           NOTION_SLEEP_DB_ID: ${{ secrets.NOTION_SLEEP_DB_ID }}
-          TZ: 'America/Montreal'
+          TZ: 'Europe/London'
         run: |
           python -m src.workflows.garmin-activities
           python -m src.workflows.personal-records
